Wildfire: Copy was different on website
Maybe someone edited the block.  Not sure, just want to capture what it was before the change.

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -48,20 +48,19 @@
 				<br />
 				A look at the multi-layer defense protecting our communities
 			</h2>
-			<p>
-				In 2024, among the four states we serve, over
-				<a href="https://gacc.nifc.gov/sacc/predictive/intelligence/NationalYTDbyStateandAgency.pdf">acres
-					burned</a>
-				in wildland fires, and
-				<a
-					href="https://www.iii.org/fact-statistic/facts-statistics-wildfires#:~:text=According%20to%20the%20National%20Interagency,most%20destructive%2C%20and%20deadliest%20wildfires">ranks
-					second</a>
-				for most homes at risk of extreme fires in the United States. Our service territory contains national
-				forests and parks, cultural sites, endangered plants and animals, as well as farms, ranches, small
-				towns and 18 Native nations. In order to protect the people and ecosystems we serve, Tri-State has
-				constructed and deployed a multi-layered mitigation plan. Our current approach is broken down into
-				two categories: situational awareness and risk reduction.
-			</p>
+			<p>In 2024, among the four states we serve, over <a
+					href="https://gacc.nifc.gov/sacc/predictive/intelligence/NationalYTDbyStateandAgency.pdf"
+					target="_blank" rel="noopener">700,00+ acres burned</a> in wildland fires, and Colorado&nbsp;<a
+					href="https://www.iii.org/fact-statistic/facts-statistics-wildfires#:~:text=According%20to%20the%20National%20Interagency,most%20destructive%2C%20and%20deadliest%20wildfires"
+					target="_blank" rel="noopener">ranks second </a> for most homes at risk of extreme fires in the
+				United States.
+				Our service territory contains national forests and parks, cultural sites, endangered plants and
+				animals, as well as
+				farms, ranches, small towns and 18 Native nations. In order to protect the people and ecosystems we
+				serve, Tri-State
+				has constructed and deployed a multi-layered mitigation plan. Our current approach is broken down into
+				two
+				categories: situational awareness and risk reduction.</p>
 		</div>
 	</section>
 
