Wildfire: New video and thumb

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -149,10 +149,9 @@
 	<!-- Risk Reduction -->
 	<section class="min-h-96 bg-gray text-center sm:grid sm:grid-cols-2 sm:text-left">
 		<div class="relative grid aspect-video place-content-center sm:aspect-auto">
-			<img src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/VegMgmtVideoCover_web.jpg"
-				alt="Power lines running through forest with clearance on both sides"
-				class="absolute size-full object-cover" />
-			<a href="https://www.youtube.com/embed/bd45kecdSms" data-featherlight="iframe"
+			<img src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/wildfirevideo_web.jpg"
+				alt="Tri-State employee on the job" class="absolute size-full object-cover" />
+			<a href="https://www.youtube.com/embed/dPFeHHoZVHw" data-featherlight="iframe"
 				data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
 				data-featherlight-iframe-width="500" class="z-10">
 				<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
