Podcast: New disclaimer text added

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -148,6 +148,22 @@
 				Watts
 				is a registered trademark of Tri-State (Tri-State Generation and Transmission Association, Inc.).
 			</p>
+			<p class="!text-xs">
+				This podcast may contain certain forward-looking statements regarding our prospective performance, plans
+				and strategies within the meaning of Section 27A of the Securities Act and Section 21E of the Securities
+				Exchange Act of 1934, as amended. We intend such forward-looking statements to be covered by the safe
+				harbor provisions for forward-looking statements contained in the Private Securities Litigation Reform
+				Act of 1995 and are including this statement for purposes of said safe harbor provisions. Accordingly,
+				actual results may differ materially from anticipated results. Tri-State undertakes no obligation to
+				update these forward-looking statements to reflect events or circumstances that occur after the date on
+				which such statements were made. Important factors that may cause such a difference include any other
+				factors discussed in our filings with the SEC, including the Risk Factors contained in the our Annual
+				Report on Form 10-K and Quarterly Reports on Form 10-Q, which are available at the SEC’s website at <a
+					href="https://www.sec.gov" target="_blank">www.sec.gov</a>. You are urged to consider these factors
+				carefully in evaluating the forward-looking statements in this podcast and are cautioned not to place
+				undue reliance on such forward-looking statements, which are qualified in their entirety by this
+				cautionary statement.”
+			</p>
 		</div>
 	</section>
 
