Wildfire: Update intro content

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -44,23 +44,18 @@
 	<section class="min-h-96 px-8 py-16 text-center sm:grid sm:place-content-center sm:p-16 sm:px-8">
 		<div class="max-w-2xl space-y-4">
 			<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance">
-				Wildfire Mitigation at Tri-State:
+				Wildfire Mitigation:
 				<br />
-				A look at the multi-layer defense protecting our communities
+				Protecting Our Rural Communities
 			</h2>
-			<p>In 2024, among the four states we serve, over <a
-					href="https://gacc.nifc.gov/sacc/predictive/intelligence/NationalYTDbyStateandAgency.pdf"
-					target="_blank" rel="noopener">700,00+ acres burned</a> in wildland fires, and Colorado&nbsp;<a
-					href="https://www.iii.org/fact-statistic/facts-statistics-wildfires#:~:text=According%20to%20the%20National%20Interagency,most%20destructive%2C%20and%20deadliest%20wildfires"
-					target="_blank" rel="noopener">ranks second </a> for most homes at risk of extreme fires in the
-				United States.
-				Our service territory contains national forests and parks, cultural sites, endangered plants and
-				animals, as well as
-				farms, ranches, small towns and 18 Native nations. In order to protect the people and ecosystems we
-				serve, Tri-State
-				has constructed and deployed a multi-layered mitigation plan. Our current approach is broken down into
-				two
-				categories: situational awareness and risk reduction.</p>
+			<p>Tri-State and our members are all not-for-profits serving nearly one million customers across Colorado,
+				New Mexico, Wyoming and Nebraska covering nearly half of the land mass in these states. Our wildfire
+				mitigation plans exist to keep our communities safe and protect our transmission system so that we can
+				provide safe, dependable and affordable electricity.
+			</p>
+			<p>To protect the people and ecosystems we serve, Tri-State has constructed and deployed a multi-layered
+				mitigation plan. Our current approach is broken down into two categories: situational awareness and risk
+				reduction.</p>
 		</div>
 	</section>
 
