Wildfire: New PDF and mobile fix

--- a/wildfire-mitigation.htm
+++ b/wildfire-mitigation.htm
@@ -71,7 +71,7 @@
 				chainsaws on dry days, no drones on windy days.)
 			</p>
 			<p>
-				<a href="https://tristate.coop/sites/default/files/PDF/resources/2024%20Tri-State%20Wildfire%20Mitigation%201-Sheeter.pdf"
+				<a href="https://tristate.coop/sites/default/files/PDF/resources/2025%20TS%20Wildfire%20Mitigation%201-Sheeter.pdf"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
 					<img src="https://tristate.coop/sites/default/files/images/icons/button-download-arrow.svg"
 						alt="down arrow" class="h-4" />
@@ -83,7 +83,7 @@
 		<div class="relative aspect-square md:aspect-video lg:order-2 lg:aspect-auto">
 			<figure class="absolute size-full">
 				<img src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/WildfireModeling_web.jpg"
-					alt="Wildfire Modeling" class="absolute size-full object-cover" />
+					alt="Wildfire Modeling" class="absolute left-0 size-full object-cover" />
 				<figcaption class="absolute bottom-0 !border-0 bg-black bg-opacity-75 p-6 text-white">
 					Custom modeling results of wildfire risk surrounding Tri-State transmission line, used to generate
 					priority for risk reduction.
