--- a/obr.htm
+++ b/obr.htm
@@ -237,6 +237,11 @@
 							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/TS_OBR_Generic_web.jpg"
 								alt="No money down, no credit check, low-interest rate"></a>
 					</div>
+					<div class="swiper-slide ts-slide ts-slide-video">
+						<a class="video-thumbnail" data-featherlight="iframe"
+							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+							data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/d-5ReVubLYA"
+							target="_blank" rel="noopener">
 
 				</div>
 				<!-- If we need pagination -->
