OBR: Slider html fix. Was using initted markup.
Probably copied this from the website rather than the docs.  Silly.

--- a/obr.htm
+++ b/obr.htm
@@ -243,25 +243,18 @@
 							data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/d-5ReVubLYA"
 							target="_blank" rel="noopener">
 
+							<img src="https://tristate.coop/sites/default/files/images/electrify-and-save/2025/ductless-heat-pump-for-energy-efficiency.jpg"
+								alt="Heats in sub-zero temperatures"></a>
+					</div>
+
 				</div>
-				<!-- If we need pagination -->
+				<!-- Pagination -->
+				<div class="swiper-pagination"></div>
 
-				<div class="swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal"><span
-						class="swiper-pagination-bullet"></span><span
-						class="swiper-pagination-bullet swiper-pagination-bullet-active"
-						aria-current="true"></span><span class="swiper-pagination-bullet"></span><span
-						class="swiper-pagination-bullet"></span></div>
-				<!-- If we need navigation buttons -->
+				<!-- Navigation buttons -->
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
 
-				<div class="swiper-button-prev" tabindex="0" role="button" aria-label="Previous slide"
-					aria-controls="swiper-wrapper-2ce21e5173ee7de10" aria-disabled="false">&nbsp;</div>
-
-				<div class="swiper-button-next" tabindex="0" role="button" aria-label="Next slide"
-					aria-controls="swiper-wrapper-2ce21e5173ee7de10" aria-disabled="false">&nbsp;</div>
-				<!-- If we need scrollbar -->
-
-				<!-- <div class="swiper-scrollbar">&nbsp;</div> -->
-				<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
 			</div><!-- swiper -->
 		</div>
 	</section>
