QI: Button hover fix

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -336,7 +336,7 @@
 								state and federal rebates.
 							</p>
 							<p>
-								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:bg-white hover:text-[#9CB03B] transition"
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
 									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
 									target="_blank">
 									Install Incentive Form
@@ -349,7 +349,6 @@
 
 			<section class="hidden" data-plumber>
 				<div class="grid sm:grid-cols-2">
-
 					<!-- Image Column -->
 					<div
 						class="relative flex items-center justify-center text-4xl text-white bg-gray-600 aspect-[3/2] sm:aspect-auto sm:order-last">
@@ -359,10 +358,6 @@
 							Incentives for heat pump water heaters
 						</div>
 					</div>
-
-
-
-
 					<!-- Content Column -->
 					<div class="bg-[#9CB03B] text-white p-8 sm:p-12 md:py-16">
 						<div class="space-y-4">
@@ -377,7 +372,7 @@
 								members
 								offer rebates that can be combined with state and federal rebates.</p>
 							<p>
-								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:bg-white hover:text-[#9CB03B] transition"
+								<a class="inline-block border-2 border-solid text-white border-white py-2 px-6 rounded-full no-underline hover:text-[#9CB03B] transition"
 									href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/E%26S%20Quality%20Install%20Rebate%20Form.pdf"
 									target="_blank">
 									Install Incentive Form
