QI: New HVAC section - Training resources.

--- a/quality-install.htm
+++ b/quality-install.htm
@@ -384,6 +384,54 @@
 			</section>
 
 
+			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center hidden" data-hvac>
+				<div class="mx-auto space-y-4">
+					<h2 class="headline-light ts-heading-2">
+						Additional HVAC troubleshooting and training resources
+					</h2>
+					<div class="p-4 text-gray-700 flex flex-col items-center">
+						<div class="w-max text-left">
+							<p class="font-semibold">Sizing Tools:</p>
+							<ul class="space-y-2">
+								<li>
+									<a href="https://betterbuiltnw.com/hvac-sizing-tool" target="_blank">
+										HVAC Sizing Tool: BetterBuiltNW
+									</a>
+								</li>
+								<li>
+									<a href="https://www.coolcalc.com/" target="_blank">
+										Cool Calc: CoolCalc Manual J
+									</a>
+								</li>
+							</ul>
+
+							<p class="font-semibold mt-8">Product Information / Selection Assistance:</p>
+							<ul class="space-y-2">
+								<li>
+									<a href="https://neep.org/heating-electrification/ccashp-specification-product-list"
+										target="_blank">
+										NEEP Cold Climate Heat Pump List
+									</a>
+								</li>
+								<li>
+									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20%26%20Selecting%20-%20NEEP%20Guide.pdf"
+										target="_blank">
+										ASHP Sizing & Selecting - NEEP Guide
+									</a>
+								</li>
+								<li>
+									<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/ASHP%20Sizing%20and%20Selection%20Guide%20(National%20Canadian%20Tool).pdf"
+										target="_blank">
+										ASHP Sizing and Selection Guide (National Canadian Tool)
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
 
 
 
