--- a/obr.htm
+++ b/obr.htm
@@ -315,42 +315,48 @@
 		<h2 class="ts-heading-2 font-serif text-2xl font-light text-wrap-balance" style="margin-bottom: 0;">
 			Learn More About Available Upgrades
 		</h2>
-		<div class="flex flex-col items-center text-center p-4">
-			<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-center text-gray-700">
-				<a href="#" class="flex items-center gap-2">
+		<div class="flex flex-col items-center">
+			<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 justify-center text-gray-700 p-4">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Dual%20Fuel%20Heat%20Pump.pdf"
+					target="_blank" class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Dual fuel heat pump HVAC
 				</a>
-				<a href="#" class="flex items-center gap-2">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Heat%20Pump%20Water%20Heater.pdf"
+					target="_blank" class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Heat pump water heaters
 				</a>
-				<a href="#" class="flex items-center gap-2">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/EV.pdf" target="_blank"
+					class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Electric Vehicle chargers
 				</a>
-				<a href="#" class="flex items-center gap-2">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Building%20Envelope.pdf"
+					target="_blank" class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Home efficiency and insulation
 				</a>
-				<a href="#" class="flex items-center gap-2">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Heat%20Pump.pdf"
+					target="_blank" class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Heat pump HVAC
 				</a>
-				<a href="#" class="flex items-center gap-2">
+				<a href="https://tristate.coop/sites/default/files/PDF/electrify-and-save/Whole%20House%20Fans.pdf"
+					target="_blank" class="flex items-center gap-2">
 					<img src="https://tristate.coop/sites/default/files/images/icons/arrow-up-right-from-square-regular-blue.svg"
 						alt="" class="size-3 mt-0.5">
 					Whole house fans
 				</a>
 			</div>
 		</div>
-
 	</section>
+
 
 	<div class="fixed top-72 right-6 z-10" data-sticky><a href="#"
 			class="block items-center gap-2 rounded-full border px-4 py-2 font-normal no-underline transition-transform text-black text-center md:inline-flex">Apply
