Podcast: Adjust hero layering
It was under the navigation on the website.

--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -33,7 +33,7 @@
 
 <body id="main" class="block-region-content">
 	<!-- Hero -->
-	<section class="relative overflow-hidden grid place-content-center">
+	<section class="relative z-0 overflow-hidden grid place-content-center">
 		<img src="https://tristate.coop/sites/default/files/images/podcast/tooled-leather.jpg" alt="" srcset=""
 			class="absolute inset-0 object-cover">
 		<div class="relative z-10 py-20"><img
