RP: Coop Diff v2

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -62,7 +62,7 @@
 				</div>
 			</section>
 			<section class="px-8 py-16">
-				<div class="mx-auto max-w-2xl text-center text-balance">
+				<div class="mx-auto max-w-2xl text-center">
 					<h2 class="font-serif font-light text-3xl">
 						More than a promise
 					</h2>
