--- a/erp.htm
+++ b/erp.htm
@@ -38,7 +38,6 @@
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
 	<link rel="stylesheet" href="assets/css/build.css" />
 
-
 	<style>
 		.block-region-content p {
 			font-size: 16px;
@@ -62,110 +61,139 @@
 					class="absolute inset-0 w-full h-full object-cover z-0" />
 				<div
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
-					<h1 class="text-4xl md:text-5xl font-serif text-balance">Our way forward</h1>
+					<h1 class="text-4xl md:text-5xl font-serif text-balance">Our Plan For the Future</h1>
 				</div>
 			</section>
+
 
 			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="font-serif font-light text-3xl">
-						Natural Gas
+						Ensuring reliability into the future
 					</h2>
 					<p>
-						Tri-State’s significant investment in renewable resources is supported by a 307 MW
-						hydrogen-capable natural
-						gas plant and the replacement of turbines at an existing natural gas plant. This upgrade will
-						restore its
-						previous capacity of 272 MMW and slightly exceed it, reaching 281 MW.
-					</p>
-					<p>
-						Due to the significant increase in renewable energy on the regional grid, targeted projects like
-						these are
-						critical for shoring-up capacity during times of high demand, low renewable output, or extreme
-						weather
-						conditions.
-					</p>
-					<p>
-						The combustion turbine gas plant Tri-State identified will provide significant operational
-						flexibility to
-						secure reliability, especially during periods of high electricity demand that exceed renewable
-						supply. By
-						operating at or below a 40% annual capacity factor, it will also minimize GHG emissions. This
-						facility will
-						also maintain investment and employment opportunities in the Moffat County area as the
-						coal-fired Craig
-						Station retires in September 2028.
-					</p>
-					<p>
-						<a href="#"
-							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">Link
-							to Battery Resource</a>
+						Tri-State and our members are building an electric system for the future that maintains
+						reliability and enhances
+						resilience at competitive rates for our membership. As part of Tri-State’s ongoing system
+						planning processes, we perform
+						detailed modeling to identify the types and locations of new resources that will advance our
+						mission to serve our
+						members a reliable, affordable and responsible supply of electricity.
+
 					</p>
 				</div>
 			</section>
-
 			<section class="relative flex flex-col justify-center min-h-[50vh] lg:h-[500px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/DSCF4006-800x800.jpg" alt="Heavy machinery"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
 			</section>
-
 			<section class="px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="font-serif font-light text-3xl">
 						It’s all in the mix
 					</h2>
 					<p>
-						Tri-State’s 2023 Electric Resource Plan Phase II Report presents a portfolio that not only meets
-						but exceeds
-						industry-standard and extreme weather reliability metrics. It also reduces GHG emissions to
-						required levels
-						in Colorado, satisfies the growing Renewable Portfolio Standard in New Mexico, and does so at a
-						lower cost
-						than alternative scenarios.
+						Tri-State’s plan develops a portfolio of resources that meets both industry-standard and
+						industry-leading heightened
+						extreme weather metrics in addition to state environmental requirements and does so at the
+						lowest cost.
+
+
+
 					</p>
 					<p>
-						Tri-State will also proceed with previously announced retirements for Craig Station Unit 1 at
-						the end of
-						this year and Units 2 and 3 in 2028, and Springerville Station Unit 3 in 2031.
+						The steps below are part of Tri-State’s all-of-the-above generation mix, which includes diverse
+						technologies and
+						locations that promote system reliability, resilience and affordability.
 					</p>
-					<p>
-						In addition, this plan includes the replacement of five existing turbines at Shafer Station with
-						hydrogen-capable turbines. The plan restores the stations to their previous nameplate capacity
-						of 281 MW,
-						slightly exceeding the previous 272 MW capacity rating.
-					</p>
-					<p>
-						This portfolio results in an 80% reduction in emissions associated with wholesale electricity
-						sales in
-						Colorado relative to a 2005 baseline by 2030.
-					</p>
-					<p>
-						Tri-State has selected projects capable of utilizing surplus interconnection or ones that don’t
-						require
-						significant network upgrades. As a result, we’ve optimized our preferred portfolio to avoid
-						$370M in
-						transmission capital expenditures during the resource acquisition period.
-					</p>
-					<p>
-						<a href="/western-watts"
-							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">Link
-							to Matt Lisa Podcast</a>
-					</p>
+					<p>Tri-State will:</p>
+					<ul class="text-left max-w-md mx-auto text-wrap space-y-2">
+						<li>Pursue bids for over a gigawatt/1,350 MW of new renewable, hybrid and standalone short-term
+							storage resources.</li>
+						<li>Select a 307 MW natural gas combustion turbine natural gas facility with hydrogen-blend
+							capability.</li>
+						<li>Replace combustion turbines at an existing natural gas facility to restore the facility to a
+							nameplate capacity of
+							281 MW. These combustion turbines will also be hydrogen-blend capable.</li>
+						<li>Proceed with the retirements of Craig Station Unit 1 at the end of 2025 and Units 2 and 3 in
+							2028, and Springerville
+							Station Unit 3 in 2031.</li>
+					</ul>
 				</div>
 			</section>
+			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center">
+				<div class="mx-auto max-w-2xl space-y-4">
+					<h2 class="font-serif font-light text-3xl">
+						Ensuring reliability
+					</h2>
+					<p>
+						Due to the significant increase in renewable energy on the grid, targeted dispatchable projects
+						are critical for
+						shoring-up capacity during times of high demand, low renewable output, or extreme weather
+						conditions, ensuring we
+						meet our reliability planning standards.
+					</p>
+					<p>
+						Supporting Tri-State’s significant investment in renewable resources is a 307 MW natural gas
+						combustion turbine natural
+						gas plant in Moffat County, which will be hydrogen-blend capable.
+					</p>
+					<p>
+						This combustion turbine gas plant Tri-State will provide significant operational flexibility to
+						ensure reliability.
+					</p>
+					<p>
+						This facility will also maintain investment and employment opportunities in the Moffat County
+						area as the coal-fired
+						Craig Station retires in September 2028.
+					</p>
 
 
+				</div>
+			</section>
+			<section class="bg-navy text-white py-12" data-stats-block>
+				<div class="grid grid-cols-1 md:grid-cols-3 max-w-screen-xl mx-auto text-center gap-y-12">
+					<div>
+						<div class="text-5xl font-light">
+							<span>+</span><stat-value>70</stat-value><span>%</span>
+						</div>
+						<p class="mt-4 leading-snug">
+							Of our members’ energy mix will<br />
+							come from clean sources in 2030
+						</p>
+					</div>
 
+					<div>
+						<div class="text-5xl font-light">
+							<stat-value>370</stat-value><span>M</span>
+						</div>
+						<p class="mt-4 leading-snug">
+							In avoided transmission cost by<br />
+							leveraging existing projects
+						</p>
+					</div>
 
-
-
-
-
-
-
+					<div>
+						<div class="text-5xl font-light">
+							<stat-value>80</stat-value><span>%</span>
+						</div>
+						<p class="mt-4 leading-snug">
+							Reductions in greenhouse gas<br />
+							emissions by 2030*
+						</p>
+					</div>
+				</div>
+			</section>
+			<div class="p-4 text-slate-500">* Associated with wholesale electricity sales in CO relative to
+				2005
+				baseline</div>
 
 		</div><!-- .block-region-content -->
 	</main>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/gsap_animation_platform-57397ff5d3b9ddc9453b16048c1221e4.js?su5b5k"></script>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/es_2023_animate_stats-a1f62ec331630e11c7aa90ce028329c2.js?su5b5k"></script>
 </body>
 
 </html>
