--- a/powering-future.htm
+++ b/powering-future.htm
@@ -62,7 +62,7 @@
 				<div
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">
-						Whatever the future holds, we'll power it
+						Whatever the Future Holds, We'll Power It
 					</h1>
 				</div>
 			</section>
@@ -149,6 +149,13 @@
 						regulatory requirements. We develop and assess alternative scenarios based on a number of
 						factors. The plans
 						are compared on the basis of cost, reliability, and environmental characteristics.
+					</p>
+					<p>
+
+						<a href="https://tristate.coop/erp"
+							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
+							Our Resource Plan
+						</a>
 					</p>
 				</div>
 			</section>
