--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -32,10 +32,12 @@
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_standards-c73c2df017737ccf23698c0b0736a119.css?sgj5sc" /> -->
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_9_3_2-8fbdf4ce96211052d13dbe3c35baf3a9.css?sk35jq" />
-	<link rel="stylesheet"
-		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" />
+	<!-- <link rel="stylesheet"
+		href="https://tristate.coop/sites/default/files/asset_injector/css/swiper_esg-32bb8660ccea9c5807144db1517747a2.css?sk35jq" /> -->
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/asset_injector/css/ts_general_refresh-5c80b35943a0af0412d9654ed4cf5056.css?sk35jq" />
+
+
 	<link rel="stylesheet" href="assets/css/build.css" />
 
 
@@ -63,7 +65,7 @@
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">
 						Strength in a<br>
-						diverse energy mix
+						Diverse Energy Mix
 					</h1>
 				</div>
 			</section>
@@ -77,7 +79,8 @@
 						We’re evolving our energy mix now to support our members’ needs into the future.
 					</p>
 					<p>
-						When we design our energy mix: including solar, wind, natural gas, batteries and hydro, we can
+						When we design our energy mix &mdash; including solar, wind, natural gas, batteries and hydro
+						&mdash; we can
 						supply power
 						for future generations. Whether strengthening for storm resilience or meeting the growing energy
 						demand,
@@ -96,8 +99,8 @@
 
 			<section class="grid sm:grid-cols-2">
 				<div class="relative aspect-video sm:aspect-auto">
-					<img src="https://tristate.coop/sites/default/files/images/Operations_OASIS.jpg" alt=""
-						class="absolute inset-0 w-full h-full object-cover" />
+					<img src="https://tristate.coop/sites/default/files/images/pyramid-gas-plant-v2-900x600.jpg"
+						alt="Employees at Pyramid Gas Plant" class="absolute inset-0 w-full h-full object-cover" />
 				</div>
 				<div class="bg-gray text-black px-8 py-12 sm:text-left text-center flex items-center sm:min-h-[400px]">
 					<div class="space-y-4 max-w-md mx-auto">
@@ -125,7 +128,7 @@
 				<div class="bg-navy text-white px-8 py-12 sm:text-left text-center flex items-center sm:min-h-[400px]">
 					<div class="space-y-4 max-w-md mx-auto">
 						<h2 class="font-serif font-light text-3xl text-balance">
-							Low cost, clean power
+							Low-cost, clean power
 						</h2>
 						<p>
 							We pool resources to develop larger, utility-scale renewables so members receive competitive
@@ -165,12 +168,6 @@
 						energy usage
 						by our members in 2025, with a goal of 70% by 2030.
 					</p>
-					<p>
-						<a href="#"
-							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
-							Eventually link to Jeff Wadsworth Podcast
-						</a>
-					</p>
 				</div>
 			</section>
 
@@ -179,28 +176,24 @@
 					<h2 class="font-serif font-light text-3xl">
 						Upcoming renewables projects
 					</h2>
-					<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
-						<div>
+					<div class="flex flex-wrap justify-center text-center">
+						<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
 							<div class="text-lg font-semibold">110MW</div>
 							<div>Dolores Canyon Solar, Colorado</div>
 						</div>
-						<div>
+						<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
 							<div class="text-lg font-semibold">145MW</div>
-							<div>Asial Basin Solar, Colorado</div>
+							<div>Axial Basin Solar, Colorado</div>
 						</div>
-						<div>
+						<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
 							<div class="text-lg font-semibold">200MW</div>
 							<div>Escalante Solar, New Mexico</div>
 						</div>
-						<div>
+						<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
 							<div class="text-lg font-semibold">100MW</div>
 							<div>Spanish Peaks Solar, Colorado</div>
 						</div>
-						<div>
-							<div class="text-lg font-semibold">140MW</div>
-							<div>Coyote Gulch Solar, Colorado</div>
-						</div>
-						<div>
+						<div class="w-full sm:w-1/2 md:w-1/3 px-4 pb-8 box-border">
 							<div class="text-lg font-semibold">40MW</div>
 							<div>Spanish Peaks II, Colorado</div>
 						</div>
@@ -208,17 +201,84 @@
 				</div>
 			</section>
 
-			<section class="bg-white px-8 py-16 text-center text-balance sm:grid sm:place-content-center">
-				<div class="mx-auto max-w-2xl space-y-4">
-					<h2 class="font-serif font-light text-3xl">
-						[placeholder for slider]
-					</h2>
+			<section class="bg-white sm:grid sm:place-content-center" style="--swiper-theme-color: #3d4d55">
+				<!-- Slider main container -->
+				<div class="swiper p-0 pb-10 bg-white">
+					<!-- Additional required wrapper -->
+					<div class="swiper-wrapper h-[220px] lg:h-[350px]">
+						<!-- Placeholder slides -->
+
+						<div class="swiper-slide relative w-full box-border sm:w-[60%]">
+							<figure class="relative w-full h-full">
+								<img src="https://tristate.coop/sites/default/files/images/escalante-solar-800x485.jpg"
+									alt="" class="absolute h-full w-full object-cover">
+								<figcaption
+									class="absolute box-border bottom-0 z-[1] h-auto bg-black/50 w-full text-white text-center border-0">
+									200 MW Escalante Solar Project near Grants, New Mexico
+								</figcaption>
+							</figure>
+						</div>
+						<div class="swiper-slide sm:w-[60%]">
+							<div
+								class="flex items-center justify-center relative h-full w-full text-[#3d4d55] bg-white overflow-hidden">
+
+								<span
+									class="absolute top-0 left-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top -translate-y-1/4 z-0"
+									style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px)"></span>
+								<span
+									class="absolute bottom-0 right-0 bg-[url('https://tristate.coop/sites/default/files/images/esg/quote.svg')] bg-contain bg-no-repeat bg-left-top z-0"
+									style="width:clamp(110px,25vw,220px); height:clamp(110px,25vw,220px); transform: rotate(180deg) translate(0%, -25%)"></span>
+								<figure class="w-3/4 relative z-10">
+									<blockquote
+										class="m-0 p-0 border-0 lg:text-lg font-bold text-justify text-gray-900">
+										What we're building now is going to serve our members into the 2060s. It's not
+										just
+										our kids, but our grandkids. They're
+										going to benefit from what we're building today.
+									</blockquote>
+									<figcaption
+										class="p-0 mt-5 border-0 text-[1.2rem] font-light text-[#719ab8] font-serif">
+										Duane Highley, Tri-State CEO
+									</figcaption>
+								</figure>
+							</div>
+						</div>
+
+						<div class="swiper-slide relative w-full sm:w-[60%]">
+							<a href="https://tristate.coop/susan-hunter-annual-report-2023"
+								class="absolute h-full w-full">
+								<figure class="relative w-full h-full">
+									<img src="https://tristate.coop/sites/default/files/blog/content-images/0524%20Susan%20Hunter_Blog1_1200x628.jpg"
+										alt="" class="absolute h-full w-full object-cover">
+									<figcaption
+										class="absolute box-border bottom-0 z-[1] h-auto bg-black/50 w-full text-white text-center border-0">
+										Diversifying Our Portfolio - <u>Learn More</u>
+									</figcaption>
+								</figure>
+							</a>
+						</div>
+
+
+					</div>
+
+					<!-- If we need pagination -->
+					<div class="swiper-pagination">&nbsp;</div>
+
+					<!-- If we need navigation buttons -->
+					<div class="swiper-button-prev">&nbsp;</div>
+					<div class="swiper-button-next">&nbsp;</div>
 				</div>
 			</section>
 
 
+
+
 		</div><!-- .block-region-content -->
 	</main>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?su5b5k"></script>
+	<script
+		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_tailwind-326cfbac0aac0a21b8bb152ff68ec3ef.js?su5b5k"></script>
 </body>
 
 </html>
