--- a/erp.htm
+++ b/erp.htm
@@ -83,7 +83,8 @@
 					</p>
 				</div>
 			</section>
-			<section class="relative flex flex-col justify-center min-h-[50vh] lg:h-[500px] lg:min-h-0">
+			<section
+				class="relative flex flex-col justify-center aspect-video sm:aspect-auto sm:h-[300px] lg:h-[400px] lg:min-h-0">
 				<img src="https://tristate.coop/sites/default/files/images/DSCF4006-800x800.jpg" alt="Heavy machinery"
 					class="absolute inset-0 w-full h-full object-cover z-0" />
 			</section>
@@ -106,8 +107,8 @@
 						technologies and
 						locations that promote system reliability, resilience and affordability.
 					</p>
-					<p>Tri-State will:</p>
-					<ul class="text-left max-w-md mx-auto text-wrap space-y-2">
+					<p><strong>Tri-State will:</strong></p>
+					<ul class="text-left max-w-lg mx-auto text-wrap space-y-2">
 						<li>Pursue bids for over a gigawatt/1,350 MW of new renewable, hybrid and standalone short-term
 							storage resources.</li>
 						<li>Select a 307 MW natural gas combustion turbine natural gas facility with hydrogen-blend
@@ -121,7 +122,7 @@
 					</ul>
 				</div>
 			</section>
-			<section class="px-8 pb-16 text-center text-balance sm:grid sm:place-content-center">
+			<section class="px-8 pb-16 text-center sm:grid sm:place-content-center">
 				<div class="mx-auto max-w-2xl space-y-4">
 					<h2 class="font-serif font-light text-3xl">
 						Ensuring reliability
@@ -165,7 +166,7 @@
 
 					<div>
 						<div class="text-5xl font-light">
-							<stat-value>370</stat-value><span>M</span>
+							<span>$</span><stat-value>370</stat-value><span>M</span>
 						</div>
 						<p class="mt-4 leading-snug">
 							In avoided transmission cost by<br />
