Reliability: Heading case

--- a/erp.htm
+++ b/erp.htm
@@ -61,7 +61,7 @@
 					class="absolute inset-0 w-full h-full object-cover z-0" />
 				<div
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
-					<h1 class="text-4xl md:text-5xl font-serif text-balance">Our Plan For the Future</h1>
+					<h1 class="text-4xl md:text-5xl font-serif text-balance">Our plan for the future</h1>
 				</div>
 			</section>
 
