--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -65,7 +65,7 @@
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">
 						Strength in a<br>
-						Diverse Energy Mix
+						diverse energy mix
 					</h1>
 				</div>
 			</section>
