--- a/powering-future.htm
+++ b/powering-future.htm
@@ -62,7 +62,7 @@
 				<div
 					class="relative z-10 text-white text-center px-5 py-10 max-w-3xl mx-auto leading-none text-balance">
 					<h1 class="text-4xl md:text-5xl font-serif text-balance">
-						Whatever the Future Holds, We'll Power It
+						Whatever the future holds, we'll power it
 					</h1>
 				</div>
 			</section>
