--- a/podcast-feed.htm
+++ b/podcast-feed.htm
@@ -124,8 +124,14 @@
 			</a>
 			<a href="https://tristate.coop/podcast-western-watts-the-future-of-tri-state-duane-highley" class="">
 				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/western-watts-episode-05-future-of-tri-state-duane-highley.png"
-					alt="Episode 5: Future of Tri-State">
+					alt="Episode 5: Future of Tri-State with Duane Highley">
 			</a>
+			<a href="https://tristate.coop/podcast-western-watts-electric-grid-reliability-matt-fitgibbon-lisa-tiffin"
+				class="">
+				<img src="https://tristate.coop/sites/default/files/images/podcast/episode-art/western-watts-episode-06-electric-grid-reliability-matt-fitzgibbon-lisa-tiffin-card.png"
+					alt="Episode 6: Electric Grid Reliability Matt Fitzgibbon Lisa Tiffin">
+			</a>
+
 
 		</div>
 	</section>
